# Agentic-A.I-with-openai-sdk

./: README.md
02_Open router/: .gitignore
02_Open router/openrouter/: main.py  pyproject.toml
03_Litellm_openai_agent/01_Litellm/myproject/: pyproject.toml
03_Litellm_openai_agent/01_Litellm/myproject/src/myproject/: .env  main.py  requirments.txt
03_Litellm_openai_agent/02_uv_litellm_chainlite/chatbot/: pyproject.toml
03_Litellm_openai_agent/02_uv_litellm_chainlite/chatbot/src/: .env
03_Litellm_openai_agent/02_uv_litellm_chainlite/chatbot/src/chatbot/: chat_history.json  main.py
04_Hello Agent/async Hello Agent/: main.py  pyproject.toml
04_Hello Agent/sync Hello Agent/: .env  main.py  pyproject.toml
05_Chainlit/helloworld/: chatbot.py
06 Chatbot/: .env
06 Chatbot/chatbot/: main.py  pyproject.toml
